# smt-linux

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  main.cpp  makefile  quickbuild.sh  vcpkg.json
.github/workflows/: ci.yml
Common/: Common.cpp  Common.hpp  GameMenu.hpp  GameState.cpp  GameState.hpp  New Text Document.txt
src/: main.cpp  old.txt
src/Common/: Common.cpp  Common.hpp  CommonMath.hpp  EncounterState.hpp  Game.hpp  GameMenu.cpp  GameState.cpp  GameState.hpp  Grid.cpp
src/Includes/: Common.hpp  CommonMath.hpp  EncounterState.hpp  Game.hpp  GameMenu.hpp  GameState.hpp  Renderer.hpp  ShaderCommon.hpp
src/Includes/IRenderer/: Renderer.hpp
src/Includes/IState/: GameState.hpp
src/Source/: Common.cpp  CommonMath.cpp  GameMenu.cpp  GameState.cpp  Grid.cpp  Renderer.cpp  main.cpp
